@@ -1,3 +1,7 @@
+2006-03-13  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit.c: do not open a new display at every launch.
+
 2006-03-12  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-tab.c: fix a compiler warning.
